加入全局对象console、log等 80%